# syslog-rx

./: Cargo.toml  syslog-rx.service  syslog-rx.socket  x-install
src/: main.rs
