[package]
name = "syslog-rx"
version = "0.1.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.7.0-alpha.1", features = [ "os-poll", "udp" ] }
fmt-extra = "0.2.1"
